--- a/case 01/style.css
+++ b/case 01/style.css
@@ -41,8 +41,110 @@
     right: 0;
 }
 
-.center-box{
+.box::before {
+    content: "";
+    position: absolute;
+    width: 200px;
+    height: 200px;
     background-color: white;
-    position: relative;
-    
+    border-radius: 50%;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+}
+
+.box::after {
+    content: "";
+    position: absolute;
+    width: 100px;
+    height: 100px;
+    background-color: red;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+}
+
+.center-box {
+    position: absolute;
+    width: 200px;
+    height: 200px;
+    background-color: white;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+}
+
+.center-circle {
+    position: absolute;
+    width: 100px;
+    height: 100px;
+    background-color: red;
+    border-radius: 50%;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+}
+
+.middle-up-shape {
+    position: absolute;
+    width: 150px;
+    height: 75px;
+    background-color: white;
+    border-bottom-left-radius: 200px;
+    border-bottom-right-radius: 200px;
+    top: 0;
+    left: 50%;
+    transform: translate(-50%);
+}
+
+.middle-down-shape{
+    position: absolute;
+    width: 150px;
+    height: 75px;
+    background-color: white;
+    border-top-left-radius: 200px;
+    border-top-right-radius: 200px;
+    bottom: 0;
+    left: 50%;
+    transform: translate(-50%);
+}
+
+.left-up-shape {
+    position: absolute;
+    width: 100px;
+    height: 100px;
+    background-color: white;
+    border-bottom-right-radius: 150px;
+    top: 0;
+    left: 0;
+}
+
+.right-up-shape {
+    position: absolute;
+    width: 100px;
+    height: 100px;
+    background-color: white;
+    border-bottom-left-radius: 150px;
+    top: 0;
+    right: 0;
+}
+
+.left-down-shape {
+    position: absolute;
+    width: 100px;
+    height: 100px;
+    background-color: white;
+    border-top-right-radius: 150px;
+    bottom: 0;
+    left: 0;
+}
+
+.right-down-shape {
+    position: absolute;
+    width: 100px;
+    height: 100px;
+    background-color: white;
+    border-top-left-radius: 150px;
+    bottom: 0;
+    right: 0;
 }
